# Aegisub-Scripts

./: .gitignore  README.md  scrpr.katakana_fullwidth.lua  scrpr.pangu.lua
pretranslation/: clients.py  config.py  index.py  pre_translate.py  prompts.py  pyproject.toml  scheme.py  test.py  util.py
