[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ass-pretranslation"
version = "0.0.1"

dependencies = [
    "tokencost",
    "openai",
    "dotenv",
    "ass",
    "instructor",
    "pydantic"
]

[project.scripts]
ass-pretrans = "index:main"